--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,5 @@
-altgraph==0.10.2
-bdist-mpkg==0.5.0
-certifi==2017.11.5
-chardet==3.0.4
-idna==2.6
-macholib==1.5.1
-matplotlib==1.3.1
-modulegraph==0.10.4
-py2app==0.7.3
-pyOpenSSL==0.13.1
-pyparsing==2.0.1
-python-dateutil==1.5
-pytz==2013.7
-requests==2.18.4
-scipy==0.13.0b1
-six==1.4.1
-urllib3==1.22
-vboxapi==1.0
-virtualenv==15.1.0
-xattr==0.6.4
-zope.interface==4.1.1
+py==1.4.29
+pytest==3.0.2
+requests==2.7.0
+six==1.9.0
+wheel==0.24.0
